revert back to short video

--- a/src/demo-player.html
+++ b/src/demo-player.html
@@ -53,8 +53,8 @@
   <script>
     DemoPlayer.initialize({
       viewportElementID: 'demo-player-viewport',
-      // videoUrl: '../media/resonance-h264-aac-1080p-45s.mp4',
-      videoUrl: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-1080p.mp4'
+      videoUrl: '../media/resonance-h264-aac-1080p-45s.mp4',
+      // videoUrl: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-1080p.mp4'
     });
   </script>
 
