--- a/src/demo-player.html
+++ b/src/demo-player.html
@@ -35,6 +35,7 @@
   <script src="third-party/webvr-polyfill.js"></script>
   <script src="third-party/wglu-url.js"></script>
   <script>
+    // Always use WebVRPolyfill.
     if (!WGLUUrl.getBool('polyfill', false)) {
       InitializeWebVRPolyfill();
     }
@@ -53,8 +54,8 @@
   <script>
     DemoPlayer.initialize({
       viewportElementID: 'demo-player-viewport',
-      videoUrl: '../media/resonance-h264-aac-1080p-45s.mp4',
-      // videoUrl: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-1080p.mp4'
+      // videoUrl: '../media/resonance-h264-aac-1080p-45s.mp4',
+      videoUrl: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-1080p.mp4'      
     });
   </script>
 
