--- a/src/omnitone-home.html
+++ b/src/omnitone-home.html
@@ -182,7 +182,7 @@
           with the <em>full-sphere surround</em> effect.</p>
       </div>
       <div class="jumbo-item">
-        <a href="https://github.com/GoogleChrome/omnitone/" target="_blank">
+        <a href="https://github.com/GoogleChrome/omnitone/#omnitone" target="_blank">
           <paper-button raised><iron-icon icon="av:library-books"></iron-icon>
             Documentation</paper-button>
         </a>
