--- a/src/demo-player.html
+++ b/src/demo-player.html
@@ -55,7 +55,8 @@
     DemoPlayer.initialize({
       viewportElementID: 'demo-player-viewport',
       // videoUrl: '../media/resonance-h264-aac-1080p-45s.mp4',
-      videoUrl: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-1080p.mp4'      
+      videoUrl: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-1080p.mp4',
+      videoUrlMobile: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-720p.mp4'
     });
   </script>
 
