--- a/src/demo-player.html
+++ b/src/demo-player.html
@@ -54,9 +54,10 @@
   <script>
     DemoPlayer.initialize({
       viewportElementID: 'demo-player-viewport',
-      // videoUrl: '../media/resonance-h264-aac-1080p-45s.mp4',
-      videoUrl: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-1080p.mp4',
-      videoUrlMobile: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-720p.mp4'
+      video_url_1080_local: '../media/resonance-1080p-h264-aac-excerpt.mp4',
+      video_url_720_local: '../media/resonance-720p-h264-aac-excerpt.mp4',
+      video_url_1080_remote: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-1080p-h264-aac.mp4',
+      video_url_720_remote: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-720p-h264-aac.mp4'
     });
   </script>
 
