background color fix

--- a/src/demo-player.html
+++ b/src/demo-player.html
@@ -15,6 +15,7 @@
     }
 
     #demo-player-viewport {
+      background-color: #000;
       box-sizing: border-box;
       position: absolute;
       width: 100%;
