--- a/src/omnitone-home.html
+++ b/src/omnitone-home.html
@@ -245,68 +245,7 @@
   <script>
     Polymer({
 
-      is: 'omnitone-home',
-
-      properties: {
-
-        systemInfo: {
-          type: Object,
-          value: {}
-        }
-
-      },
-
-      _initialize: function () {
-        // detect browser and platform.
-        var ua = navigator.userAgent, tem,
-        M = ua.match(/(chrome|safari|firefox|edge(?=\/))\/?\s*(\d+)/i) || [];
-        // if (/trident/i.test(M[1])) {
-        //   tem = /\brv[ :]+(\d+)/g.exec(ua) || [];
-        //   return 'IE ' + (tem[1] || '');
-        // }
-        // if (M[1] === 'Chrome') {
-        //   tem = ua.match(/\bEdge\/\d+/);
-        //   if (tem !== null)
-        //     return 'Opera '+ tem[1];
-        // }
-        M = M[2] ? [M[1], M[2]] : [navigator.appName, navigator.appVersion, '-?'];
-        if ((tem = ua.match(/version\/(\d+)/i)) !== null)
-          M.splice(1, 1, tem[1]);
-
-        this.systemInfo.browser = M[0];
-        this.systemInfo.browserVersion = M[1];
-
-        if (ua.match(/Edge/i))
-          this.systemInfo.browser = 'Edge';
-
-        if (ua.match(/iPad/i) || ua.match(/iPhone/i)) {
-          this.systemInfo.platform = 'iOS';
-        } else if (ua.match(/Mac OS X/i)) {
-          this.systemInfo.platform = 'OSX';
-        } else if (ua.match(/Android/i)) {
-          this.systemInfo.platform = 'Android';
-        } else if (ua.match(/Win/i)) {
-          this.systemInfo.platform = 'Windows';
-        }
-
-        console.log('[LANDING] system info: ', this.systemInfo);
-      },
-
-      // _verifySystemForDemo: function () {
-      //   var info = this.systemInfo;
-      //   if (info.platform === 'iOS')
-      //     return;
-
-      //   if (info.browser === 'Firefox' || info.browser === 'Edge')
-      //     return;
-
-      //   // Passed the test, activate the demo link.
-      //   this.$.eButtonPlayDemo.disabled = false;
-      // },
-
-      attached: function () {
-        this._initialize();
-      }
+      is: 'omnitone-home'
 
     });
   </script>
