--- a/src/omnitone-landing.html
+++ b/src/omnitone-landing.html
@@ -61,7 +61,7 @@
     </style>
 
     <iron-media-query query="max-width: 767px" query-matches="{{smallScreen}}"></iron-media-query>
-    <omnitone-home id="eHome" name="home"></omnitone-home>
+    <omnitone-home name="home"></omnitone-home>
 
     <footer>
       chrome &#9829; VR
