final check up 2

--- a/src/omnitone-home.html
+++ b/src/omnitone-home.html
@@ -199,7 +199,7 @@
 
     <div class="section title">
       <h1>Omnitone</h1>
-      <h2>360&#176; Audio on the Web</h2>
+      <h2>Spatial Audio on the Web</h2>
     </div>
 
     <div class="section text">
