--- a/src/omnitone-demo-player.html
+++ b/src/omnitone-demo-player.html
@@ -63,7 +63,7 @@
   <script src="third-party/vr-samples-util.js"></script>
   <script src="third-party/omnitone.min.js"></script>
   <script src="js/demo-content-data.js"></script>
-  <script src="js/demo-player-2.js"></script>
+  <script src="js/demo-player.js"></script>
 </head>
 
 <body>
